--- a/src/StockApp.css
+++ b/src/StockApp.css
@@ -1,17 +1,25 @@
 .add-share-button {
-    background-color: #661c1c;
+    /* background-color: #661c1c;
+     */
+    background-color: transparent;
+    color: #B4F8C8;
     border-radius: 10px;
     padding: 10px;
     border: none;
-    color: white;
+    /* color: white; */
     font-weight: bolder;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     width: 150px;
-    margin-bottom: 30px;
+    outline: 1px solid rgba(255, 255, 255, 0.104);
+    /* margin-bottom: 30px; */
+    transition: 0.25s;
+
 
 }
 .add-share-button:hover {
   cursor: pointer;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.104);
 }
 .h3-add {
   color: white;
@@ -19,6 +27,43 @@
 }
 .h2-val {
   color:white;
-  margin-top: 30px;
-  margin-bottom: 30px;
+
+}
+.space-between {
+  justify-content: space-between;
+}
+
+.crypto-share {
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 50vw;
+  margin-left: 25vw;
+  margin-bottom: -100px;
+
+}
+.add-share-val {
+  justify-content: space-evenly;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  width: 80vw;
+  margin-left: 10vw;
+}
+
+.margin-right {
+  margin-right: 25px;
+}
+
+.refresh-button {
+  /* background-color: #661c1c; */
+  border-radius: 10px;
+  padding: 10px;
+  border: none;
+  /* color: white; */
+  font-weight: bolder;
+  background-color: transparent;
+  color: #B4F8C8;
+
 }
