--- a/src/StockList.css
+++ b/src/StockList.css
@@ -10,18 +10,30 @@
 }
 
 .stock-symbol {
-  color: #B4F8C8;
+  color: white;
   font-weight: bolder;
 }
 .stock-button {
-  background-color: #661c1c;
+  background-color: transparent;
   border-radius: 10px;
   padding: 10px;
   border: none;
-  color: white;
+  /* color: white; */
   margin-left: 10px;
   font-weight: bolder;
+  outline: 1px solid rgba(255, 255, 255, 0.104);
+  color: #B4F8C8;
+  /* transition: 0.25s; */
 }
-.stock-buttons {
-  margin-bottom: 15px;
+/*
+.stock-button:hover {
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.104);
+} */
+
+
+
+.stock-ticker, .stock-daily, .stock-close, .stock-val, .stock-buttons {
+  height: 100px;
+  margin-bottom: 10px;
 }
